24 Apr 2006: Miek
   Miek:
	- forward port nsid (disabled by default)
   Wouter:
	- nsd-patch manual page.
	- minor MacOSX port fixes.
	- xfrd-reload-timeout: config option.
	- if you set the xfrd reload timeout to -1 it will not
	  automatically reload after a transfer. User can reload.
	- reload timeout is a wait period after the reload is triggered.
	- more verbose acl logging. Validated acls are logged in detail.
	  Invalid acls are only logged in debug mode, level >= 1.
	- log message when xfrd tcp connections max out.
	- if unknown NSEC3 hash type (not SHA-1), disable NSEC3.
	- xfrd randomizes the timeouts, within 10% of original,
	  to spread out activity. Short timeouts < 10 seconds are not
	  affected, and will give activity bursts (on startup for example).

21 Apr 2006: Wouter
	- put NSEC3 code in nsec3.c and nsec3.h.
	- iterated_hash only adds the salt if salt_len > 0.
	- added some assertions and cleanups to nsec3 code.
	- prehash also calcs the nsec3_last domain*.
	- dbaccess when reading in will set the rr_type.owner value.
	- changed namedb_find_zone to domain_find_zone, log msgs.
	- implemented logic from nsec draft 05-pre2 section 5.4.1 - 5.4.8.
	  NSEC3 responses only happen for nsd compiled with --enable-nsec3
	  and for zones where an NSEC3 with the SOA bit set exists.
	- added prehash pointer to ds parent side cover for opt out.
	- removed dynamic plugins. Dynamic plugin support is an explicit 
	  non-requirement (under creeping featurism).
	- in domain table create root nsec3 ptrs are NULL.

20 Apr 2006: Wouter
	- Unittest of base 32 encoding. 
	- unittest start for iterated hash.
	- fixed for ctrlc in debug mode.
	- delete zparser_conv_long, not used, not needed
	- nsd-xfer will display NSEC3 correctly. zonec parses.
	- improved usage() line from zonec, about -c none, must be -C.
	- base32 printed in lowercase (canonical format for DNS).
	- NSEC3 added prehash pointers to the namedb.